--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -281,11 +281,10 @@
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;"><img alt="" height="494" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/WINWORD_n3tcUkvd37.png" width="623"/></span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/WINWORD_n3tcUkvd37.png">圖片連結</a></span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_pKykomnNUM.png">圖片連結</a></span></p>
+<p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_pKykomnNUM.png" width="550"/></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;"><a href="https://127.0.0.1:8443/images/chrome_farFaSQEfb.png">圖片連結</a></span></p>
+<p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_farFaSQEfb.png" width="549"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析) (40623215)</span></p>
@@ -469,7 +468,7 @@
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
-<p>手足球零組件材料表 (含零組件下載連結)</p>
+<p><strong><img alt="" height="299" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_19-13-21.png" width="500"/></strong></p>
 <h4>零件尺寸圖</h4>
 <p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/1e17a238d46da990d0c7e221">手足球檯</a> (40623207)</p>
 <p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-09-53.png" width="800"/></p>
@@ -493,7 +492,10 @@
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/d41b63a6d82e52aa96abcf08">球桿+足球員+彈簧</a> <span>(40623207)</span></p>
 <p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-15-43.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/97c6eed8f618d680331e1d10">送球機構</a> <span>(40623207)</span></p>
-<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/><br/><br/>3D 零組件爆炸圖</h4>
+<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/></h4>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/b29bb186efb20fe6f6d8389e">組合圖</a></p>
+<p><strong><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_17-33-24.png" width="800"/></strong></p>
+<h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/0a30216732f3cfd171a17706">爆炸圖</a> (40623207)<br/><br/><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-53-36.png" width="800"/></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
@@ -646,21 +648,21 @@
 <p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
 <p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
 <p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
-<hr>
+<hr/>
 <p><span>第二版<span>送球機構模擬(有圓盤)(40623227):</span></span></p>
 <p><span><span>下載連結:<a href="https://drive.google.com/file/d/1XO_sugfiKOFQxGzpXwbu8HAWhsiXNC7n/view?usp=sharing">送球機構第二版</a></span></span></p>
 <p><span><span>雖成功進入可是無法傳送上去</span></span></p>
 <p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JmMV0KGnqQI" width="500"></iframe></span></span></p>
-<hr>
+<hr/>
 <p><span>第三版</span><span>送球機構設計(Final version)(40623224):</span></p>
 <p><span>Final version更改的內容是圓柱體的部分，由於上一版無法使球滾至上方，後來設計120度的槽，使球進入圓柱體內會隨著螺旋桿滾動而慢慢向上。</span></p>
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
-<hr>
+<hr/>
 <p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
 <p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/1Uy3w4vkDU2PcOFU54JC0du_9sBudBzIU/view">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
-<hr>
+<hr/>
 <h4><strong>BG5</strong></h4>
 <p>成品 : (40623248)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/__0Ib9cTzrA" width="560"></iframe></p>
@@ -884,12 +886,14 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<<<<<<< HEAD
+<p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
+<p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
+<p><span>手足球系統模擬-</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">電腦對電腦<span>(40423160)</span></yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <p><span>手足球系統模擬-人對人(40623237)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
-=======
-<p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
->>>>>>> scrum-1/master
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -961,39 +965,27 @@ end
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<hr>
+<hr/>
 <h4><strong>BG2</strong></h4>
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
-<p></p>
-<hr>
+<p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
+<hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><span><a href="https://www.youtube.com/watch?v=gCPO-jOPdpg">40623207呂沛蓉專案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
-<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-<p></p>
+<p><span><a href="https://www.youtube.com/watch?v=cb4zrz2aPU4" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-<<<<<<< HEAD
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
-<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
-=======
 <p></p>
-<<<<<<< HEAD
-<hr>
-=======
->>>>>>> scrum-1/master
 <hr/>
->>>>>>> 594fac735ee5340c2b9c2d87eecde480f6dbf69f
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://youtu.be/I-U-JlEgs5M">40623239 許登貴結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
-<<<<<<< HEAD
-<hr>
-=======
 <p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <hr/>
->>>>>>> 594fac735ee5340c2b9c2d87eecde480f6dbf69f
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_wRHtEhC5MI">40623201 王君庭結案口頭簡報</a></span></p>
@@ -1019,4 +1011,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr>
+<p><span></span></p>
