--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -160,6 +160,7 @@ img {
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺結案口頭報告</a></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -177,13 +178,9 @@ img {
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://youtu.be/I-U-JlEgs5M">40623239 許登貴結案口頭簡報</a></span></p>
-<<<<<<< HEAD
-<p><span><a href="https://youtu.be/jUDcZmLp38A">40623210 翁嘉宏結案口頭簡報</a></span></p>
-=======
 <p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
 <p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=IwRi95KKyrg">40623238 許筌翔結案口頭簡報</a></p>
->>>>>>> scrum-1/master
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
