--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -982,7 +982,8 @@ end
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
-<p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺結案口頭報告</a></p>
+<p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺 結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=N_WTdohJgS8&amp;t=132s">40623250湯峻傑結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
