--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -30,81 +30,82 @@
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>專案成果摘要</p>
+<p>本次專案成果其分為三種:<a href="https://www.youtube.com/watch?time_continue=53&amp;v=aAG0wYawJ-I">人v.s人</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=178&amp;v=MxwbTm1Q78Q">人v.s電腦</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=75&amp;v=Uv_SfE0ZHog">電腦v.s電腦</a></p>
+<p>其成果是三種都有做出來，其中三種的差異主要是在程式定義上的問題，人v.s人是參考老師的版本下去做更改，在做人v.s電腦與電腦v.s電腦的過程中，需先將電腦的部分做出來，之後再與人的程式做個整合與優化的動作，其實可以一次寫完整個程式，但由於非資訊類科系，故在程式上土法煉鋼，將每一部份完成後再進行統合，雖花費時間較多，但也成功做出成果。</p>
+<p>完成此次的專案須具備基本對V-rep的認識、OnShape熟悉的操作，以及和全班協同過程中能夠有除錯的能力。在程式撰寫方面，因非資訊類別科系，故在撰寫程式上需不斷的嘗試，了解其邏輯架構，才能完成；Onshape 設計中，因負責組員對其軟體有相當程度的技能，故在繪製設計圖上十分上手；而在全班協同中每個人都必須擁有除錯的能力，但由於是第一次與全班共同協同，所以在執行的過程中會有各種錯誤出現，都必須藉由討論來解決問題。</p>
+<p><span>在執行專案過程中因對程式不熟悉，故需不斷地找出錯誤，才能做出三種成果，而如何找出錯誤以及如何解決，詳見專案討論的部分。</span></p>
 <p>專案執行動機</p>
 <p><span>近年來科技發展，程式設計與系統模擬早以統合成一塊。本學期的手足球模擬，跳脫以往人</span><span lang="EN-US">v.s.</span><span>人的競賽方式，以及人</span><span lang="EN-US">v.s.</span><span>電腦，我們也想做出電腦</span><span lang="EN-US">v.s.</span><span>電腦的系統模擬，其動機為前陣子</span><span lang="EN-US">Alpha go<span> </span></span><span>擊敗不少各國高手，這讓我們想驗證電腦與電腦是否能力相當，又會如何運作；而中間使用的運算法並沒有</span><span lang="EN-US">Alpha go<span> </span></span><span>這麼複雜，但在機構設計以及運動模擬中佔了很大一部分，而我們認為電腦</span><span lang="EN-US">v.s.</span><span>電腦的程式雖可以設計，但中間是否參雜些運氣成分還有待關注。</span></p>
 <p>相關文獻探討</p>
 <p>專案執行成員</p>
-<table border="3">
+<table border="3" style="width: 531px;"><caption></caption>
 <tbody>
 <tr>
-<td><a href="https://github.com/40623247/cd2019b-40623247"><strong>Leader</strong></a></td>
-<td><a href="https://github.com/40623247/cd2019b-40623247"><strong>Assignments</strong></a></td>
+<td style="width: 195.309px; text-align: center;"><a href="https://github.com/40623247/cd2019b-40623247"><strong>Leader</strong></a></td>
+<td style="width: 336.691px; text-align: center;"><a href="https://github.com/40623247/cd2019b-40623247"><strong>Assignments</strong></a></td>
 </tr>
 <tr>
-<td><a href="https://github.com/40623247/cd2019b-40623247">40623247廖峻祥</a></td>
-<td>執行規劃、PDF</td>
+<td style="width: 195.309px; text-align: center;"><a href="https://github.com/40623247/cd2019b-40623247">40623247廖峻祥</a></td>
+<td style="width: 336.691px; text-align: center;">專案報告書、監督組員進度</td>
 </tr>
 </tbody>
 </table>
 <p><span></span></p>
+<p></p>
 <table border="3"><caption></caption>
 <tbody>
-<tr>
-<td><strong>Member</strong></td>
-<td><strong>Assignments</strong></td>
+<tr style="height: 47px;">
+<td style="text-align: center; height: 47px;"><strong>Member</strong></td>
+<td style="text-align: center; height: 47px;"><strong>Assignments</strong></td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623202">40623202 吳姍蓉</a></td>
-<td>執行規劃</td>
+<tr style="height: 45.4167px;">
+<td style="text-align: center; height: 45.4167px;"><a href="https://github.com/40623202/cd2019b-40623202">40623202 吳姍蓉</a></td>
+<td style="text-align: center; height: 45.4167px;">執行規劃</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623209">40623209 李芳瑜</a></td>
-<td>執行規劃</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623209">40623209 李芳瑜</a></td>
+<td style="text-align: center; height: 49px;">執行規劃</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623214">40623214 吳家文</a></td>
-<td>Onshape</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623214">40623214 吳家文</a></td>
+<td style="text-align: center; height: 49px;">Onshape─零組件尺寸分析</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623215">40623215 吳柏毅</a></td>
-<td>Onshape</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623215">40623215 吳柏毅</a></td>
+<td style="text-align: center; height: 49px;">Onshape─參數設計與繪圖</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623220">40623220 蔡崇廷</a></td>
-<td>v-rep 模擬</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623236">40623236 黃子峰</a></td>
+<td style="text-align: center; height: 49px;">v-rep 模擬<span>─送球機構設計與模擬</span></td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623236">40623236 黃子峰</a></td>
-<td>v-rep 模擬</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/mdecadp2018/site-40623249">40623249 李秉樺</a></td>
+<td style="text-align: center; height: 49px;">v-rep 模擬─送球機構設計與模擬</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623249">40623249 李秉樺</a></td>
-<td>v-rep 模擬</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623250">40623250 湯峻傑</a></td>
+<td style="text-align: center; height: 49px;">Onshape─細部設計與BOM圖</td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623250">40623250 湯峻傑</a></td>
-<td>Onshape</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40623251">40623251 鄧靖宣</a></td>
+<td style="text-align: center; height: 49px;"><span>Onshape─細部設計與BOM圖</span></td>
 </tr>
-<tr>
-<td><a href="https://github.com/40623251">40623251 鄧靖宣</a></td>
-<td>無</td>
-</tr>
-<tr>
-<td><a href="https://github.com/40423217">40423217 阮奕誠</a></td>
-<td>v-rep 模擬</td>
+<tr style="height: 49px;">
+<td style="text-align: center; height: 49px;"><a href="https://github.com/40423217">40423217 阮奕誠</a></td>
+<td style="text-align: center; height: 49px;">v-rep 模擬<span>─系統功能展示</span></td>
 </tr>
 </tbody>
 </table>
-<p>執行使用套件</p>
+<p><br/>專案執行內容執行使用套件</p>
 <table border="1">
 <tbody>
 <tr>
-<td>套件名稱</td>
-<td>介紹</td>
-<td>功能</td>
+<td style="text-align: center;">套件名稱</td>
+<td style="text-align: center;">介紹</td>
+<td style="text-align: center;">功能</td>
 </tr>
 <tr>
-<td>V-rep</td>
+<td style="text-align: center;">V-rep</td>
 <td>
 <p>VREP集成了建模<span>/</span>编程<span>/</span>物理引擎。具有四款物理引擎，<span>Bullet/ODE/Vortex/Newton</span>。</p>
 <p>其開源、快速、靈活的建模和模擬，同時有一定的模擬精度，為研發中非常重要的一部分。</p>
@@ -126,7 +127,7 @@
 </td>
 </tr>
 <tr>
-<td>OnShape</td>
+<td style="text-align: center;">OnShape</td>
 <td>
 <p>Onshape 只要打開瀏覽器即可使用，使用的永遠都是最新版本，因此兼容性不會成為問题。</p>
 <p>Onshape 具備了有限的實體建模能力，其幾何實體是由<span> Part Studio </span>這個多部件幾何體開發環境來生成的，没有文件的概念，因此也没有外部参照的依赖性问题。</p>
@@ -145,7 +146,7 @@
 </td>
 </tr>
 <tr>
-<td>Github</td>
+<td style="text-align: center;">Github</td>
 <td>
 <p>GitHub是透過<span><a href="https://zh.wikipedia.org/wiki/Git">Git</a></span>進行<span><a href="https://zh.wikipedia.org/wiki/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6">版本控制</a></span>的軟體原始碼代管服務平台，由<span>GitHub</span>公司的開發者使用<span><a href="https://zh.wikipedia.org/wiki/Ruby_on_Rails">Ruby on Rails</a></span>編寫而成。</p>
 <p>特色<span>:</span></p>
@@ -167,12 +168,14 @@
 <td>
 <p>是一套簡單的網際內容管理系統<span>, </span>採用<span>Flask </span>網際框架<span>, </span>以<span> Beautifulsoup </span>解讀分頁內容<span>.</span></p>
 以<span> Python 3 </span>編寫<span>, </span>利用<span> Flask </span>網路框架可以在伺服器運行<span>, </span>讓使用者利用瀏覽器擷取動態<span> WWW </span>伺服器所送至近端的<span> html </span>加上<span> Javascript </span>程式碼<span>, </span>然後在瀏覽器中顯示網際內容編輯器。</td>
-<td>1.建立可攜環境後即可多人協同</td>
+<td>建立可攜環境後即可多人協同</td>
 </tr>
 </tbody>
 </table>
 <p>專案執行過程規劃</p>
-<p>專案執行內容</p>
+<p><span>在專案執行過程規劃中，我們首先是做好分工，再來是各自為自己的工作蒐集資料，並開始著手準備，其在執行的過程中遇到困難都是互相討論解決，最後將大家的想法整合後才完成每一組的模擬。做好小組專案後，開始將自己製作的內容放入個人網站以及簡報，完成從期中考後到期末考週的工作與任務。</span></p>
+<p><span><img caption="false" height="506" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%9C%96%E7%89%871.png" width="800"/></span></p>
+<p style="text-align: center;"><span>               ●執行過程規劃甘特圖</span></p>
 <p>專案結論</p>
 <hr/>
 <h4><strong>BG3</strong></h4>
@@ -415,23 +418,23 @@
 <p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，球從送球機構完整跑一次，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></span></p>
 <p></p>
-<hr/>
+<hr>
 <h4><strong>BG4</strong></h4>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">其他版本的連結</a></p>
 <p><strong>送球機構的初步構想:</strong></p>
 <p><span>(送球機構的初步構想Final version - 40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/Xi4Qw-XutsM" width="500"></iframe></span></p>
-<hr/>
+<hr>
 <p></p>
 <p><strong>送球機構設計與模擬:</strong></p>
 <p><span>第一版</span><span>送球機構設計(有縫隙)(40623224):</span></p>
 <p><img alt="" height="427" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%B8%80%E7%89%88(%E6%9C%89%E7%B8%AB%E9%9A%99).png" width="700"/></p>
-<hr/>
+<hr>
 <p>第一版<span>送球機構模擬(有縫隙)(40623227):</span></p>
 <p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
 <p><span>因有縫隙關係導致無法進入</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span><span></span></p>
-<hr/>
+<hr>
 <p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
 <p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
 <p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
@@ -591,4 +594,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
