--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -155,6 +155,7 @@ img {
     <div id="tipue_search_content">結案報告 << <a href='結案報告.html'>Previous</a> <a href='專案報告書.html'>Next</a> >> 專案報告書<br /><h1>專案口頭簡報</h1>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><a href="https://www.youtube.com/watch?v=UKmK8mvFx0E">40623236 黃子峰結案口頭簡報</a></p>
@@ -162,11 +163,11 @@ img {
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<<<<<<< HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-=======
+<p>=======</p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
->>>>>>> scrum-1/master
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
