--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -435,7 +435,7 @@
 <h4>零件 BOM</h4>
 <p>手足球零組件材料表 (含零組件下載連結)</p>
 <h4>零件尺寸圖</h4>
-<p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/d8734d77d2aa524b961cc1dc">零件 放球檯 和放球裝支架</a>   40623245<img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-02.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/d8734d77d2aa524b961cc1dc">零件 放球檯 和放球裝支架</a>  40623245<img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-02.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/8b4fbdf95f0f887de918ecf0">零件 送球機構用電圈 放球檯用滑塊 送球檯底部固定槽</a> 40623245</p>
 <p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-13_21-05-19.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/5653844cc215c64eac3c06cf/w/5ad65bf78937d05897ff41fb/e/76833e18618be1c72bc2f875">零件 送球檯用滑塊 送球檯用止推滑塊</a> 40623245</p>
@@ -982,7 +982,8 @@ end
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
-<p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺結案口頭報告</a></p>
+<p><a href="https://www.youtube.com/watch?v=z7thbG8H-AY">40623249李秉樺 結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=N_WTdohJgS8&amp;t=132s">40623250湯峻傑結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
