--- a/config/content.htm
+++ b/config/content.htm
@@ -753,6 +753,8 @@
 <p>雙人足球員模擬 (40623249)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <p><a href="https://github.com/mdecadp2018/site-40623220/blob/gh-pages/bg2.ttt">人對人 V-rep</a> (40623220)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aAG0wYawJ-I" width="560"></iframe></p>
+<p>(40623249)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">-- model in Solvespace 500 mm = 5000 mm in V-rep
 --[[
 Simulation is 10 times of realistic environment
@@ -894,12 +896,16 @@ if not res then
 end
   
 -- Put some clean-up code here:</pre>
+<p><a href="https://drive.google.com/open?id=1ZWjvxCqKGr-Szal7qcLMl7sAYaviV7aP">人對機</a>(40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MxwbTm1Q78Q" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=1p2HKnmYjagW8lsLz0vRP7G1mGymBHOcH">機對機(</a>40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Uv_SfE0ZHog" width="560"></iframe></p>
 <p></p>
 <p></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
@@ -908,9 +914,9 @@ end
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <p><span>手足球系統模擬-人對人(40623237)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
-=======
+<p>=======</p>
 <p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -993,7 +999,7 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p>=======</p>
@@ -1007,7 +1013,7 @@ end
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
 <p></p>
->>>>>>> 461b39fd704fb8b4915c21255293d15adb65f962
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 461b39fd704fb8b4915c21255293d15adb65f962
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
