--- a/config/content.htm
+++ b/config/content.htm
@@ -279,11 +279,11 @@
 <h2>零組件尺寸分析</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
-<p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。</span></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">針對手足球人偶跟手足球之間的干涉情形做出配合圖。(40623222)</span></p>
 <p><span style="font-size: larger; font-family: dfkai-sb;"><img alt="" height="494" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/WINWORD_n3tcUkvd37.png" width="623"/></span></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖</span></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">手足球人偶工作圖(40623222)</span></p>
 <p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_pKykomnNUM.png" width="550"/></p>
-<p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖</span></p>
+<p><span style="font-size: larger; font-family: dfkai-sb;">手足球桌工作圖(40623222)</span></p>
 <p><img alt="" height="390" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/chrome_farFaSQEfb.png" width="549"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
@@ -993,21 +993,15 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<<<<<<< HEAD
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
+<p></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-<p>=======</p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
-=======
+<p></p>
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-<p></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
-<p></p>
->>>>>>> 461b39fd704fb8b4915c21255293d15adb65f962
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
