--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -988,6 +988,7 @@ end
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
@@ -1002,22 +1003,26 @@ end
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p></p>
 =======
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 56e42a87b9c5edeccde1958e14c70bed013526b1
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; f5133ba0afbd79098c7054d3cad90b914fa49ab8
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-<p></p>
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+=======
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
+<p>=======</p>
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; f5133ba0afbd79098c7054d3cad90b914fa49ab8
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
+<p></p>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 =======
-<p></p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 461b39fd704fb8b4915c21255293d15adb65f962
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 56e42a87b9c5edeccde1958e14c70bed013526b1
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 461b39fd704fb8b4915c21255293d15adb65f962</p>
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; f5133ba0afbd79098c7054d3cad90b914fa49ab8
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -1026,6 +1031,7 @@ end
 <p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
 <p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=IwRi95KKyrg">40623238 許筌翔結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=jUDcZmLp38A&amp;feature=youtu.bea">40623210 翁嘉宏結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
